Add splitting by sections chunking section in the notebook

--- a/read_repo_data.ipynb
+++ b/read_repo_data.ipynb
@@ -1132,7 +1132,7 @@
    "id": "ca8e0279",
    "metadata": {},
    "source": [
-    "### 2.2 Splitting by Paragraphs and Sections"
+    "### 2.2 Splitting by Sections"
    ]
   },
   {
@@ -1447,10 +1447,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 122,
+   "id": "6f01f0d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5057"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(erc_data_chunks_sections[3][\"section\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "224d54bc",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "I think it worked well, but I need to verify more cases. The last section seens to be big."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a5ba37e",
+   "metadata": {},
    "source": []
   }
  ],
