Add intelligent chunking with LLM section in the notebook

--- a/read_repo_data.ipynb
+++ b/read_repo_data.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "bccfa56e",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "5130e199",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 14,
    "id": "44ff300a",
    "metadata": {},
    "outputs": [],
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 15,
    "id": "eaba7796",
    "metadata": {},
    "outputs": [],
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 16,
    "id": "363fbb37",
    "metadata": {},
    "outputs": [
@@ -122,7 +122,7 @@
        "540"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 17,
    "id": "63bd63dc",
    "metadata": {},
    "outputs": [
@@ -150,7 +150,7 @@
        " 'filename': 'ERCs-master/ERCS/eip-1.md'}"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1132,7 +1132,7 @@
    "id": "ca8e0279",
    "metadata": {},
    "source": [
-    "### 2.2 Splitting by Sections"
+    "### 2.3 Splitting by Sections"
    ]
   },
   {
@@ -1477,6 +1477,352 @@
   {
    "cell_type": "markdown",
    "id": "5a5ba37e",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0ab9da0c",
+   "metadata": {},
+   "source": [
+    "### 2.4 Intelligent Chunking with LLM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "3557bc5d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Google AI configured successfully!\n"
+     ]
+    }
+   ],
+   "source": [
+    "import google.generativeai as genai\n",
+    "import os\n",
+    "\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "load_dotenv()\n",
+    "\n",
+    "try:\n",
+    "    api_key = os.getenv(\"GOOGLE_API_KEY\")\n",
+    "    if not api_key:\n",
+    "        raise ValueError(\"The environment variable GOOGLE_API_KEY was not found.\")\n",
+    "    \n",
+    "    genai.configure(api_key=api_key)\n",
+    "    print(\"✅ Google AI configured successfully!\")\n",
+    "\n",
+    "except ValueError as e:\n",
+    "    logger.error(e)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "2c5ebd55",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def llm(prompt, model='gemini-2.5-flash'):\n",
+    "    \"\"\"\n",
+    "    Sends a prompt to the Gemini model and returns the response as text.\n",
+    "\n",
+    "    Args:\n",
+    "        prompt (str): The text to send to the model.\n",
+    "        model (str): The Gemini model name to use.\n",
+    "                     'gemini-1.5-flash' is a great fast and capable option.\n",
+    "\n",
+    "    Returns:\n",
+    "        str: The generated text response from the model.\n",
+    "    \"\"\"\n",
+    "    model_instance = genai.GenerativeModel(model)\n",
+    "\n",
+    "    response = model_instance.generate_content(prompt)\n",
+    "    \n",
+    "    return response.text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "92c380cd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt_template = \"\"\"\n",
+    "    Split the provided document into logical sections that make sense for a Q&A system.\n",
+    "    \n",
+    "    Each section should be self-contained and cover a specific topic or concept.\n",
+    "    \n",
+    "    <DOCUMENT>\n",
+    "    {document}\n",
+    "    </DOCUMENT>\n",
+    "    \n",
+    "    Use this format:\n",
+    "    \n",
+    "    ## Section Name\n",
+    "    \n",
+    "    Section content with all relevant details\n",
+    "    \n",
+    "    ---\n",
+    "    \n",
+    "    ## Another Section Name\n",
+    "    \n",
+    "    Another section content\n",
+    "    \n",
+    "    ---\n",
+    "\"\"\".strip()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65c6b493",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def intelligent_chunking(text):\n",
+    "    prompt = prompt_template.format(document=text)\n",
+    "    response = llm(prompt)\n",
+    "    sections = response.split('---')\n",
+    "    sections = [s.strip() for s in sections if s.strip()]\n",
+    "\n",
+    "    return sections"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "38293e28",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "361b59ee1f79450abca9a3daf38855f1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/10 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from tqdm.auto import tqdm\n",
+    "\n",
+    "erc_data_ai_chunks = []\n",
+    "\n",
+    "for doc in tqdm(erc_data[:10]):  # Limiting to first 10 documents for cost and time control\n",
+    "    doc_copy = doc.copy()\n",
+    "    doc_content = doc_copy.pop('content')\n",
+    "\n",
+    "    sections = intelligent_chunking(doc_content)\n",
+    "    for section in sections:\n",
+    "        count += 1\n",
+    "        section_doc = doc_copy.copy()\n",
+    "        section_doc['section'] = section\n",
+    "        erc_data_ai_chunks.append(section_doc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "ae2bd175",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "256"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(erc_data_ai_chunks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "c40a0f79",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'eip': 1,\n",
+       " 'title': 'EIP Purpose and Guidelines',\n",
+       " 'status': 'Living',\n",
+       " 'type': 'Meta',\n",
+       " 'author': 'Martin Becze <mb@ethereum.org>, Hudson Jameson <hudson@ethereum.org>, et al.',\n",
+       " 'created': datetime.date(2015, 10, 27),\n",
+       " 'filename': 'ERCs-master/ERCS/eip-1.md',\n",
+       " 'section': '## What is an EIP?\\n\\nAn EIP, or Ethereum Improvement Proposal, is a design document that provides information to the Ethereum community or describes a new feature for Ethereum, its processes, or environment. It should contain a concise technical specification of the feature and its rationale. The EIP author is responsible for building community consensus and documenting dissenting opinions.'}"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "erc_data_ai_chunks[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "a950a23e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'eip': 1,\n",
+       " 'title': 'EIP Purpose and Guidelines',\n",
+       " 'status': 'Living',\n",
+       " 'type': 'Meta',\n",
+       " 'author': 'Martin Becze <mb@ethereum.org>, Hudson Jameson <hudson@ethereum.org>, et al.',\n",
+       " 'created': datetime.date(2015, 10, 27),\n",
+       " 'filename': 'ERCs-master/ERCS/eip-1.md',\n",
+       " 'section': \"## EIP Rationale and Purpose\\n\\nEIPs are intended to be the primary mechanism for proposing new features, gathering technical input from the community, and documenting Ethereum's design decisions. Since EIPs are maintained as text files in a versioned repository, their revision history serves as a historical record of feature proposals. For Ethereum implementers, EIPs offer a convenient way to track implementation progress, allowing them to list implemented EIPs for end-users to check the status of a given implementation or library.\"}"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "erc_data_ai_chunks[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "8499e8ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'eip': 1,\n",
+       " 'title': 'EIP Purpose and Guidelines',\n",
+       " 'status': 'Living',\n",
+       " 'type': 'Meta',\n",
+       " 'author': 'Martin Becze <mb@ethereum.org>, Hudson Jameson <hudson@ethereum.org>, et al.',\n",
+       " 'created': datetime.date(2015, 10, 27),\n",
+       " 'filename': 'ERCs-master/ERCS/eip-1.md',\n",
+       " 'section': '## EIP Types\\n\\nThere are three main types of EIPs, each serving a distinct purpose:\\n\\n*   **Standards Track EIP**: Describes changes affecting most or all Ethereum implementations. This includes network protocol changes, block/transaction validity rules, application standards, or any change impacting interoperability. Standards Track EIPs comprise a design document, an implementation, and sometimes an update to the formal specification. They are further categorized into:\\n    *   **Core**: Improvements requiring a consensus fork or relevant to \"core dev\" discussions (e.g., EIP-5, EIP-101). If a Core EIP proposes changes to the EVM, it must refer to instructions by their mnemonics and define their opcodes (e.g., `REVERT (0xfe)`).\\n    *   **Networking**: Improvements related to devp2p, Light Ethereum Subprotocol, whisper, and swarm network protocol specifications (e.g., EIP-8).\\n    *   **Interface**: Improvements concerning language-level standards like method names (e.g., EIP-6) and contract ABIs.\\n    *   **ERC**: Application-level standards and conventions, including token standards (e.g., ERC-20), name registries (e.g., ERC-137), URI schemes, library/package formats, and wallet formats.\\n*   **Meta EIP**: Describes a process surrounding Ethereum or proposes a change to an existing process or an event within it. These apply to areas outside the Ethereum protocol itself, may require community consensus, and are typically not optional to ignore. Examples include procedures, guidelines, changes to decision-making processes, and changes to development tools or environment. Any meta-EIP is also considered a Process EIP.\\n*   **Informational EIP**: Describes an Ethereum design issue, or provides general guidelines or information, but does not propose a new feature. Informational EIPs do not necessarily represent community consensus or a recommendation; users and implementers are free to ignore or follow their advice.\\n\\n**General EIP Criteria:**\\nIt is highly recommended that a single EIP focuses on a single key proposal or idea. An EIP must be a clear, complete description of the proposed enhancement, represent a net improvement, and its proposed implementation (if applicable) must be solid and not unduly complicate the protocol. A change affecting multiple clients or defining a standard for multiple applications requires an EIP, whereas a change to only one client does not.'}"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "erc_data_ai_chunks[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "dae98a3b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'eip': 1,\n",
+       " 'title': 'EIP Purpose and Guidelines',\n",
+       " 'status': 'Living',\n",
+       " 'type': 'Meta',\n",
+       " 'author': 'Martin Becze <mb@ethereum.org>, Hudson Jameson <hudson@ethereum.org>, et al.',\n",
+       " 'created': datetime.date(2015, 10, 27),\n",
+       " 'filename': 'ERCs-master/ERCS/eip-1.md',\n",
+       " 'section': \"## EIP Work Flow: Shepherding an EIP\\n\\nThe EIP work flow involves the EIP author (champion), EIP editors, and Ethereum Core Developers.\\n\\n1.  **Vetting the Idea**: Before writing a formal EIP, authors should vet their idea by opening a discussion thread on the Ethereum Magicians forum to check for originality and avoid redundant work.\\n2.  **Presenting the Idea and Gathering Feedback**: Once vetted, the author presents the idea via an EIP to reviewers and interested parties, inviting feedback from editors, developers, and the community. Authors should gauge if community interest justifies the implementation work and the number of parties required to conform. Negative community feedback can prevent an EIP from advancing past the Draft stage.\\n3.  **Community Consensus**: The champion's role is to write the EIP in the prescribed format, lead discussions in appropriate forums, and build community consensus around the idea.\"}"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "erc_data_ai_chunks[3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "1c3ff66a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "## EIP Work Flow: Shepherding an EIP\n",
+      "\n",
+      "The EIP work flow involves the EIP author (champion), EIP editors, and Ethereum Core Developers.\n",
+      "\n",
+      "1.  **Vetting the Idea**: Before writing a formal EIP, authors should vet their idea by opening a discussion thread on the Ethereum Magicians forum to check for originality and avoid redundant work.\n",
+      "2.  **Presenting the Idea and Gathering Feedback**: Once vetted, the author presents the idea via an EIP to reviewers and interested parties, inviting feedback from editors, developers, and the community. Authors should gauge if community interest justifies the implementation work and the number of parties required to conform. Negative community feedback can prevent an EIP from advancing past the Draft stage.\n",
+      "3.  **Community Consensus**: The champion's role is to write the EIP in the prescribed format, lead discussions in appropriate forums, and build community consensus around the idea.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(erc_data_ai_chunks[3][\"section\"], sep=\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "707adbb9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "929"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(erc_data_ai_chunks[3][\"section\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a0978be",
+   "metadata": {},
+   "source": [
+    "The result using AI seems to have been smaller than the previous method. Did we lose a lot of information?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9109a864",
    "metadata": {},
    "source": []
   }
