feat: add lexical search with MinSearch integration
- Add MinSearch dependency for text-based document indexing and search
- Integrate lexical search functionality into main.py pipeline
- Create searchable index with text fields for chunk content and metadata
- Add example search query for 'What is ERC-4337?' with result logging
- Update notebook with MinSearch implementation and ERC search examples
- Import necessary dependencies (minsearch, tqdm) in main module
- Establish foundation for hybrid search capabilities in RAG system

This enables fast keyword-based document retrieval as the first search layer.

--- a/ai_agent_notebook.ipynb
+++ b/ai_agent_notebook.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "id": "bccfa56e",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "id": "44ff300a",
    "metadata": {},
    "outputs": [],
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "id": "eaba7796",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "id": "363fbb37",
    "metadata": {},
    "outputs": [
@@ -107,7 +107,7 @@
        "540"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -905,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "id": "54118c3d",
    "metadata": {},
    "outputs": [],
@@ -927,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "id": "67a851cb",
    "metadata": {},
    "outputs": [],
@@ -945,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "id": "98d03c80",
    "metadata": {},
    "outputs": [
@@ -955,7 +955,7 @@
        "7022"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1809,6 +1809,102 @@
    "cell_type": "markdown",
    "id": "9109a864",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e999ac7",
+   "metadata": {},
+   "source": [
+    "## 3. Add Search"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95f767f8",
+   "metadata": {},
+   "source": [
+    "### 3.1 Lexical Indexing with MinSearch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "cc7f1c08",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<minsearch.minsearch.Index at 0x1260fee90>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from minsearch import Index\n",
+    "\n",
+    "index = Index(\n",
+    "    text_fields=[\"chunk\", \"title\", \"description\", \"author\", \"status\", \"type\", \"filename\"],\n",
+    "    keyword_fields=[]\n",
+    ")\n",
+    "\n",
+    "index.fit(erc_data_chunks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "559a0583",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = \"What is ERC-4337?\"\n",
+    "results = index.search(query)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "26c3cfe1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'start': 41000,\n",
+       " 'chunk': ' had already been created.\\nThis comes to make it easier for bundlers to query the address without knowing if the Account has already been deployed, by simulating a call to `entryPoint.getSenderAddress()`, which calls the `factory` under the hood.\\nWhen `initCode` is specified, if either the `sender` address points to an existing contract or the `sender` address still does not exist after calling the `initCode`,\\nthen the operation is aborted.\\nThe `initCode` MUST NOT be called directly from the `EntryPoint`, but from another address.\\nThe contract created by this factory method MUST accept a call to `validateUserOp` to validate the `UserOperation`\\'s signature.\\nFor security reasons, it is important that the generated contract address will depend on the initial signature.\\nThis way, even if someone can deploy an Account at that address, he can\\'t set different credentials to control it.\\nThe Factory has to be staked if it accesses global storage.\\nNOTE: In order for the Wallet Application to determine the \"counterfactual\" address of the Account prior to its creation,\\nit SHOULD make a static call to the `entryPoint.getSenderAddress()`\\n\\n## Backwards Compatibility\\n\\nThis ERC does not change the consensus layer, so there are no backwards compatibility issues for Ethereum as a whole. Unfortunately it is not easily compatible with pre-[ERC-4337](./eip-4337.md) Smart Contract Accounts, because those Accounts do not have a `validateUserOp` function. If the Smart Contract Account has a function for authorizing a trusted `UserOperation` submitter, then this could be fixed by creating an [ERC-4337](./eip-4337.md) compatible Account that re-implements the verification logic as a wrapper and setting it to be the original Account\\'s trusted `UserOperation` submitter.\\n\\n## Security Considerations\\n\\nThe `EntryPoint` contract will need to be audited and formally verified, because it will serve as a central trust point for _all_ [ERC-4337]. In total, this architecture reduces auditing and formal v',\n",
+       " 'eip': 4337,\n",
+       " 'title': 'Account Abstraction Using Alt Mempool',\n",
+       " 'description': 'Account abstraction without consensus-layer protocol changes, instead relying on higher-layer infrastructure.',\n",
+       " 'author': 'Vitalik Buterin (@vbuterin), Yoav Weiss (@yoavw), Dror Tirosh (@drortirosh), Shahaf Nacson (@shahafn), Alex Forshtat (@forshtat), Kristof Gazso (@kristofgazso), Tjaden Hess (@tjade273)',\n",
+       " 'discussions-to': 'https://ethereum-magicians.org/t/erc-4337-account-abstraction-via-entry-point-contract-specification/7160',\n",
+       " 'status': 'Review',\n",
+       " 'type': 'Standards Track',\n",
+       " 'category': 'ERC',\n",
+       " 'created': datetime.date(2021, 9, 29),\n",
+       " 'requires': 712,\n",
+       " 'filename': 'ERCs-master/ERCS/erc-4337.md'}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e1bd2810",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
