feat: implement complete RAG pipeline with Pydantic AI agent
- Add comprehensive document chunking with three methods:
  * Sliding window chunking with configurable size/step
  * Markdown section-based splitting by header level
  * AI-powered intelligent chunking using Gemini model
- Implement multi-modal search capabilities:
  * Text-based search with MinSearch indexing
  * Vector search using sentence-transformers embeddings
  * Hybrid search combining both approaches with deduplication
- Integrate Pydantic AI agent with conversational interface:
  * Create agent with system prompt for Ethereum expertise
  * Add text search as agent tool for document retrieval
  * Enable async query processing with structured responses
- Add Google Generative AI configuration with environment variables
- Include comprehensive logging and error handling throughout pipeline
- Set default configuration: sliding window chunking + text search

This completes the core RAG system enabling conversational queries about Ethereum ERCs.

--- a/ai_agent_notebook.ipynb
+++ b/ai_agent_notebook.ipynb
@@ -905,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "54118c3d",
    "metadata": {},
    "outputs": [],
@@ -927,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "67a851cb",
    "metadata": {},
    "outputs": [],
@@ -945,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "98d03c80",
    "metadata": {},
    "outputs": [
@@ -955,7 +955,7 @@
        "7022"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1829,17 +1829,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "id": "cc7f1c08",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<minsearch.minsearch.Index at 0x108ada0d0>"
+       "<minsearch.minsearch.Index at 0x14d6b0d70>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3754,6 +3754,146 @@
    "source": [
     "final_results"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c24cdfd0",
+   "metadata": {},
+   "source": [
+    "## 4. Agents and Tools"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "730e7892",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List, Any\n",
+    "\n",
+    "def text_search(query: str) -> List[Any]:\n",
+    "    \"\"\"\n",
+    "    Perform a text-based search on the Ethereum ERC index.\n",
+    "\n",
+    "    Args:\n",
+    "        query (str): The search query string.\n",
+    "\n",
+    "    Returns:\n",
+    "        List[Any]: A list of up to 5 search results returned by the Ethereum ERC index.\n",
+    "    \"\"\"\n",
+    "    return index.search(query, num_results=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "8bb5bb8e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "system_prompt = \"\"\"\n",
+    "You are an expert in Computer Science and Distributed Ledger Technology, \n",
+    "with an emphasis on the Ethereum blockchain.\n",
+    "\n",
+    "Use the reference material to answer the questions.\n",
+    "\n",
+    "If the search does not return relevant results, inform the user and provide\n",
+    "general guidance.\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "47b8f48d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pydantic_ai import Agent\n",
+    "\n",
+    "agent = Agent(\n",
+    "    name=\"ethereum_agent\",\n",
+    "    instructions=system_prompt,\n",
+    "    tools=[text_search],\n",
+    "    model=\"gemini-2.5-flash\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "db3e7503",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:google_genai.models:AFC is enabled with max remote calls: 10.\n",
+      "INFO:httpx:HTTP Request: POST https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash:generateContent \"HTTP/1.1 200 OK\"\n",
+      "INFO:google_genai.models:AFC is enabled with max remote calls: 10.\n",
+      "INFO:httpx:HTTP Request: POST https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash:generateContent \"HTTP/1.1 200 OK\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "question = \"How to create a token on Ethereum blockchain?\"\n",
+    "\n",
+    "result = await agent.run(user_prompt=question)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "1bb634ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "To create a token on the Ethereum blockchain, you generally need to deploy a smart contract that adheres to a token standard. The most common standard for fungible tokens is **ERC-20**, as described in EIP-20.\n",
+      "\n",
+      "The ERC-20 standard provides a common interface for tokens within smart contracts, enabling basic functionalities such as:\n",
+      "\n",
+      "*   **`name()`**: Returns the name of the token (e.g., \"MyToken\"). (Optional)\n",
+      "*   **`symbol()`**: Returns the symbol of the token (e.g., \"HIX\"). (Optional)\n",
+      "*   **`decimals()`**: Returns the number of decimals the token uses (e.g., `8` means to divide the token amount by `100000000` for user representation). (Optional)\n",
+      "*   **`totalSupply()`**: Returns the total token supply.\n",
+      "*   **`balanceOf(address _owner)`**: Returns the account balance of a given address.\n",
+      "*   **`transfer(address _to, uint256 _value)`**: Transfers `_value` amount of tokens to address `_to`.\n",
+      "*   **`transferFrom(address _from, address _to, uint256 _value)`**: Transfers `_value` amount of tokens from address `_from` to address `_to`. This is used for a withdraw workflow where a contract can transfer tokens on your behalf.\n",
+      "*   **`approve(address _spender, uint256 _value)`**: Allows `_spender` to withdraw from your account multiple times, up to the `_value` amount.\n",
+      "*   **`allowance(address _owner, address _spender)`**: Returns the amount which `_spender` is still allowed to withdraw from `_owner`.\n",
+      "\n",
+      "Additionally, ERC-20 contracts must trigger `Transfer` and `Approval` events for corresponding actions.\n",
+      "\n",
+      "Many ERC-20 compliant tokens are already deployed on the Ethereum network. You can find example implementations to help you get started:\n",
+      "\n",
+      "*   [OpenZeppelin ERC-20 implementation](https://github.com/OpenZeppelin/openzeppelin-contracts/blob/master/contracts/token/ERC20/ERC20.sol)\n",
+      "*   [ConsenSys EIP-20 implementation](https://github.com/ConsenSys/Tokens/blob/master/contracts/eip20/EIP20.sol)\n",
+      "\n",
+      "To create your token, you would typically:\n",
+      "1.  **Write or adapt a smart contract** (usually in Solidity) that implements the ERC-20 standard.\n",
+      "2.  **Compile the contract**.\n",
+      "3.  **Deploy the compiled contract** to the Ethereum blockchain using a tool like Remix, Truffle, or Hardhat, and a wallet like MetaMask.\n",
+      "\n",
+      "Keep in mind that deploying a contract incurs gas fees.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(result.output, sep=\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d95b5a55",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
